Update to use webpack for build
Should now allow easier modularisation and styling

--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
       "clock": "ms",
       "speed": 50
     }
-  ]
+  ],
+  "devDependencies": {
+    "webpack": "~1.13.1",
+    "style-loader": "~0.13.1",
+    "css-loader": "~0.23.1",
+    "es6-promise": "~3.2.1"
+  }
 }
